# bazel-angular-example

./: .bazelrc  README.md  WORKSPACE  angular-bazel-0.0.0.tgz  angular.json  angular.json.bak  karma.conf.js  package-lock.json  package.json  tsconfig.json
e2e/src/: app.e2e-spec.ts
projects/my-first-library/: README.md  karma.conf.js  ng-package.json  package.json
projects/my-first-library/src/: BUILD.bazel  public-api.ts
projects/my-first-library/src/lib/: my-first-library.component.scss  my-first-library.component.spec.ts  my-first-library.component.ts  my-first-library.module.ts  my-first-library.service.spec.ts  my-first-library.service.ts
projects/second-lib/: README.md  karma.conf.js  ng-package.json  package.json
projects/second-lib/src/: BUILD.bazel  public-api.ts
projects/second-lib/src/lib/: second-lib.component.spec.ts  second-lib.component.ts  second-lib.module.ts  second-lib.service.spec.ts  second-lib.service.ts
src/: BUILD.bazel  in-index.html  index.html
src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
